[package]
name = "vane"
version = "0.6.7"
edition = "2024"
rust-version = "1.92"
[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "vane"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
arc-swap = "1.0"
dashmap = "5.0"
once_cell = "1.0"